# Esp32

./: .gitignore  CMakeLists.txt  README.md  RESTORE_COMPLETE.md  RTC_IMPLEMENTATION_SUMMARY.md  RTC_QUICK_START.md  RTC_STATE_RECOVERY_GUIDE.md  RTC_TEST_GUIDE.md  WATCHDOG_FIX_GUIDE.md  fix_watchdog_config.ps1
components/BSP/: CMakeLists.txt
components/BSP/EXIT/: exit.c
components/BSP/MYSPI/: my_spi.h
components/BSP/RELAY/: relay.c  relay.h
components/BSP/SPILCD/: spilcd.c
components/BSP/XL9555/: xl9555.c
components/WiFi/: CMakeLists.txt  wifi_client.c  wifi_client.h
main/: CMakeLists.txt  main.c
